inou/prp/tests/errors/bw_attr_non_debug.prp
/*
:name: bw_attr_non_debug
:type: error
:error: debug-only
:help: each elaboration may compute a different legal range
*/

// `.[bw_max]`/`.[bw_min]` are readable only inside `cassert`/`assert`:
// branching on the running range would not converge (the next elaboration
// may compute a different legal range and silently change the circuit).

mut x:u8 = 30
if x.[bw_max] != 30 { x = 30 } else { x = 40 }  // locate_error_here
